<resources>
    <string name="app_name">Cricket Thermometer</string>
    <string name="notification_view">Did you know you can determine the temperature outside by counting the number of chips the cricket makes? Just count the number of chips one makes in 25 seconds and place that number in the box below</string>
    <string name="text_hint">Number of chips in 25 seconds</string>
    <string name="calculate_temperature">CALCULATE TEMPERATURE</string>
    <string name="text_view">TextView</string>
    <string name="todo">TODO</string>
</resources>
